[package]
name = "sso"
version = "0.0.1"
authors = ["robin <r@nosql.asia>"]

[dependencies]
nickel = "*"
#ldap = "*"
#openldap = "1.1.0"
openldap = {"path" = "lib/rust-cldap"}
rust-crypto = "^0.2"
rustc-serialize = "0.3"
url = "*"
log = "0.3"
env_logger = "0.3"
rocksdb = "0.4.1"
toml = "0.2"
rand = "0.3"
